# timerboss-desktop

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.agents/skills/bump_version/: SKILL.md
.github/workflows/: publish.yml
src/: App.tsx  index.css  overlay-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: bosses.ts
src/pages/: ConfigPage.tsx  OverlayPage.tsx
src/store/: useBossStore.ts
